save before conversion to raw without express

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body ng-cloak>
+<script src="//fast.appcues.com/22456.js"></script>
 <div style="padding:48px">
     <md-card>
         <div layout="column" layout-gt-sm="row">
