finish design strategy

--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
                 the worker and master communication, that way there would be less strain on the messaging system.
 
                 I then swapped out express for node's default http module, which has less frills and turned out to be more performant.
-                Ultimately, I was able to hit around 3500 req /s, after running multiple apache bench batches as v8 continues
+                Ultimately, I was able to hit 3700 req /s, after running multiple apache bench batches as v8 continues
                 its optimizations after the first batch.
 
             </p>
