add appcues frontend

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
     <link rel="stylesheet" href="main.css">
 </head>
-<body ng-cloak>
+<body ng-controller="MainController as mCtrl">
 <script src="//fast.appcues.com/22456.js"></script>
 <div style="padding:48px">
     <md-card>
@@ -104,8 +104,7 @@
     </md-card>
 </div>
 <div style="background: #FFF; padding: 80px; text-align: center">
-    <h1 class="blue">Thanks for assigning an exercise that wasn't contrived and actually interesting to make :)</h1>
-    <h2 class="blue">- Mike</h2>
+    <h1 class="blue">Max Throughput: 3700 req / s On 4 Cores</h1>
     <md-divider></md-divider>
     <div layout-gt-sm="row" style="margin-top:24px">
         <div flex>
@@ -124,6 +123,7 @@
 
 <!-- Angular Material Library -->
 <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.2/angular-ui-router.min.js"></script>
 <script src="app.js"></script>
 </body>
 </html>
