add testing to frontend

--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,19 @@
                     </p>
                 </md-card-content>
             </div>
+            <md-divider></md-divider>
+            <div flex>
+                <md-card-title>
+                    <md-card-title-text>
+                        <span class="md-headline">Testing</span>
+                    </md-card-title-text>
+                </md-card-title>
+                <md-card-content>
+                    <p>
+                        <kbd>mocha</kbd>
+                    </p>
+                </md-card-content>
+            </div>
         </div>
 
     </md-card>
